# tz_water_pump_function_prediction

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml  tz_water_pump_function_prediction.Rproj
data/tz_shapefile/nbs_tz_shapefiles/Tanzania GIS Maps/: Tanzania.shp.xml  WHO.shp.xml
docs/: mkdocs.yml
docs/docs/: index.md
pump_it_up_data_mining_the_water_table/: __init__.py  dataset.py  features.py  plots.py
pump_it_up_data_mining_the_water_table/modeling/: predict.py  train.py
scripts/: 00_Analysis_Log.md  01_data_import_cleaning.R  02_exploratory_data_analysis.R  03_analysis.R  04_data_visualization.R  05_Report.Rmd  05_tz_water_pump_report.Rmd  06_render_reports.R
