[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pump_it_up_data_mining_the_water_table"
version = "0.0.1"
description = "Predicting water pump function in Tanzania."
authors = [
  { name = "Jarret Angbazo" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.13.0"


[tool.ruff]
line-length = 99
src = ["pump_it_up_data_mining_the_water_table"]
include = ["pyproject.toml", "pump_it_up_data_mining_the_water_table/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["pump_it_up_data_mining_the_water_table"]
force-sort-within-sections = true

